--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "config": "^3.0.0",
     "express": "4.x",
     "puppeteer": "^5.2.1",
-    "raven": "^2.6.3"
+    "puppeteer-autoscroll-down": "^0.1.6",
+    "raven": "^2.6.3",
+    "user-agents": "^1.0.559"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
