- mongoDB integration - refactoring

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "config": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "4.x",
+    "mongodb": "^3.6.0",
     "puppeteer": "^5.2.1",
     "puppeteer-autoscroll-down": "^0.1.6",
     "raven": "^2.6.3",
