--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "4.x",
     "mongodb": "^3.6.0",
+    "node-telegram-bot-api": "^0.50.0",
     "puppeteer": "^5.2.1",
     "raven": "^2.6.3",
     "user-agents": "^1.0.559"
