--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@sentry/node": "5.20.1",
     "axios": "^0.19.2",
+    "bull": "^3.18.0",
     "cheerio": "^1.0.0-rc.3",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "4.x",
+    "file-type": "^14.7.1",
     "mongodb": "^3.6.0",
     "node-telegram-bot-api": "^0.50.0",
     "puppeteer": "^5.2.1",
