--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Scraper for clothing sales",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "NODE_ENV=production node app.js"
+  },
   "dependencies": {
     "@sentry/node": "5.20.1",
     "axios": "^0.19.2",
