--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "4.x",
     "file-type": "^14.7.1",
+    "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "node-telegram-bot-api": "^0.50.0",
     "puppeteer": "^5.2.1",
