--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-fetch": "^3.0.6",
     "express": "4.x",
     "file-type": "^14.7.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "node-telegram-bot-api": "^0.50.0",
